# Liver

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  build.bat
.github/workflows/: cmake.yml
assets/fonts/fnts/: fnt_ubuntu_mono.fnt
src/framework/: liver.h  pch.cpp  pch.h  sellas.h
src/framework/core/: application.cpp  application.h  camera.cpp  camera.h  common.h  game_instance.cpp  game_instance.h  input.cpp  input.h  window.cpp  window.h
src/framework/core/math/: math.h  transform.cpp  transform.h
src/framework/renderer/: renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_backend.cpp  renderer_backend.h  texture.cpp  texture.h
src/framework/renderer/opengl/: backend_gl.cpp  backend_gl.h  gl_renderer.cpp  gl_renderer.h  shader_gl.cpp  shader_gl.h  shader_program_gl.cpp  shader_program_gl.h  texture_gl.cpp  texture_gl.h
src/framework/renderer/opengl/shaders/: shader_sprite.vert
src/framework/tests/: main.cpp  test_input.cpp
src/game/: game_entry.cpp
